add css stylesheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Cute+Font|Merienda");
+import url("https://fonts.googleapis.com/css?family=Cute+Font|Merienda");
 @import url("https://fonts.googleapis.com/css?family=Akronim");
 * {
     box-sizing: border-box;
