--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ import url("https://fonts.googleapis.com/css?family=Cute+Font|Merienda");
     margin-bottom: 9%;
 }
 #hed {
-    background-image: url('../images/backgrounds/h_img.jpg');
+    background-image: url('../images/h_img.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
@@ -44,7 +44,7 @@ h1 {
     font-family: 'Akronim', cursive;
 }
 #service {
-    background-image: url('../images/backgrounds/s_image.jpg');
+    background-image: url('../images/s_image.jpg');
     color: #fff;
     margin-bottom: 50px;
     background-position: center;
@@ -83,7 +83,7 @@ h1 {
 #contact {
     padding-top: 100px;
     margin-bottom: 50px;
-    background-image: url('../images/backgrounds/c_image.jpg');
+    background-image: url('../images/c_image.jpg');
     background-size: cover;
     background-position: cover;
     width: 100%;
