--- a/css/styles.css
+++ b/css/styles.css
@@ -161,19 +161,46 @@ input.error {
     /*color: #333;*/
 }
 .portimg .porttext {
-    display: none;
-    opacity: 1;
-    background-color:rgba(255, 255, 255, 0.6);
     width: auto;
     position: absolute;
-    bottom: 0;
-    color: deepskyblue;
+    bottom: 3.5rem;
+    left: 1.5rem;
+    color:transparent;
     text-align: center;
     font-weight: bold;
-    font-size: 30px;
-    padding: 30px;
-    height: 100%;
+    font-size: 15px;
+   
 }
+   
+
+
+
+.portimg :hover{
+ cursor: pointer;
+opacity: 0.85;
+ color:#b61818;
+ font-weight: bolder;
+ 
+ 
+
+}
+
+
 textarea::placeholder{
     color: #ffffff;
+}
+#desp{
+    display: none;
+}
+#devp{
+    display: none;
+
+}
+#prop{
+    display: none;
+
+}
+
+#desImg{
+    display: initial;
 }
